<resources>
    <string name="app_name">FutureRealization</string>

    <string name="permission_deny_toast">Denying permission will prevent normal use of the program</string>
    <string-array name="page_tab_items">
        <item>Main Page</item>
        <item>Bookkeeping</item>
        <item>Other</item>
    </string-array>
    <string name="menu_add_sth">add</string>
    <string name="menu_delete_all_sth">delete all</string>
    <string name="menu_update">update</string>
    <string name="hint_content">Add content here</string>
    <string name="radio_group_type_text">Type:</string>
    <string name="radio_btn_type_name">No#Long-term#Short-term</string>
    <string name="radio_group_state_text">State:</string>
    <string name="radio_btn_state_name">No#Yes</string>
    <string name="add_msg_alerdialog_title">Add new plan</string>
    <string name="update_msg_alerdialog_title">Update plan</string>
    <string name="msg_menu_add_test">Add test</string>
    <string name="delete_all_msg_dialog_title">Do you want to delete all?</string>
    <string name="update_dialog_delete_btn">Delete</string>
    <string name="toast_delete_msg_item_success">Delete success</string>
    <string name="toast_action_msg_item_failed">Operation failed</string>
    <string name="chat_send_btn">Send</string>
    <string name="account_type_view_text">expenditure#income</string>
    <string name="account_type_view_code">1#0</string>
    <string name="remark_msg_btn">Remark</string>
    <string name="chat_msg_delete_pop">Delete</string>
    <string name="income_text">income</string>
    <string name="over_text">over</string>
    <string name="item_account_remark_text">Remark:</string>
</resources>